--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
     <title>Young Miko</title>
 </head>
 <body>
-    
+    <h1>Young MIko</h1>
+    <p>María Victoria Ramírez de Arellano Cardona, conhecida artisticamente como Young Miko, é uma cantora, compositora e ex-futebolista porto-riquenha.</p>
