--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
 <body>
     <h1>Young MIko</h1>
     <p>María Victoria Ramírez de Arellano Cardona, conhecida artisticamente como Young Miko, é uma cantora, compositora e ex-futebolista porto-riquenha.</p>
-</body> <img scr="
+</body> <img scr="<iframe src="https://assets.pinterest.com/ext/embed.html?id=70228075434599132" height="528" width="345" frameborder="0" scrolling="no" ></iframe>" alt="Young Miko mostrando apenas seus olhos por causa das mãos no rosto" width="400">
