--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt=BR">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-with, initial-scale=1.0">
-    <title>Young Miko</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Young Miko</title>
 </head>
 <body>
-    <h1>Young MIko</h1>
-    <p>María Victoria Ramírez de Arellano Cardona, conhecida artisticamente como Young Miko, é uma cantora, compositora e ex-futebolista porto-riquenha.</p>
-    </body> <img scr="<iframe src="https://sl.bing.net/hEwjB7aBNMO" 
-    alt="Young Miko mostrando apenas seus olhos por causa das mãos no rosto" width="400">
+  <h1>Young Miko</h1>
+  <p>María Victoria Ramírez de Arellano Cardona, conhecida artisticamente como Young Miko, é uma cantora, compositora e ex-futebolista porto-riquenha.</p>
+  
+  <img 
+    src="https://i.pinimg.com/736x/8a/7d/c6/8a7dc6c6ca71fdf4c0cdb509b75f926f.jpg"
+    alt="Young Miko mostrando apenas seus olhos por causa das mãos no rosto"
+    width="400"
+  >
+</body>
+</html>
