--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   
   <img 
     src="https://i.pinimg.com/736x/8a/7d/c6/8a7dc6c6ca71fdf4c0cdb509b75f926f.jpg"
+    src="https://i.pinimg.com/1200x/12/71/8a/12718a2e3ec3a1cd3f21ed17d6763d3f.jpg"
     alt="Young Miko mostrando apenas seus olhos por causa das mãos no rosto"
     width="400"
   >
