--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
     alt="Young Miko mostrando apenas seus olhos por causa das mãos no rosto"
     width="400"
   >
+  <img 
+    src="https://i.pinimg.com/1200x/12/71/8a/12718a2e3ec3a1cd3f21ed17d6763d3f.jpg"
+    alt="Young Miko em outra pose"
+    width="300"
+  >
 </body>
 </html>
